plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'ru.veselov'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

ext {
    jjwt_version = "0.11.5"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    implementation 'net.datafaker:datafaker:1.8.0'
    implementation 'org.springframework:spring-webflux:6.0.7'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.springframework.data:spring-data-redis:3.0.5'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.0.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.6'
    implementation 'org.apache.commons:commons-pool2:2.11.1'
    implementation "io.jsonwebtoken:jjwt-api:${jjwt_version}"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.security:spring-security-messaging:6.1.0'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwt_version}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwt_version}"

    developmentOnly('org.springframework.boot:spring-boot-devtools:3.0.6')

    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testImplementation 'org.projectlombok:lombok:1.18.22'
    testImplementation 'io.projectreactor:reactor-test:3.5.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.18.3'
    testImplementation "org.testcontainers:postgresql:1.18.3"
    testImplementation 'com.redis.testcontainers:testcontainers-redis:1.6.4'

    testAnnotationProcessor 'org.projectlombok:lombok'


}

tasks.named('test') {
    useJUnitPlatform()
}
